@@ -4,6 +4,5 @@
 <manifest:manifest xmlns:manifest="http://bizzwiki.org/2007/manifest">
  <manifest:file-entry manifest:media-type="application/php" manifest:full-path="Backup.body.php"/>
  <manifest:file-entry manifest:media-type="application/php" manifest:full-path="Backup.php"/>
- <manifest:file-entry manifest:media-type="application/php" manifest:full-path="Backup.i18n.php"/>
  <manifest:file-entry manifest:media-type="text/wikitext" manifest:full-path="Backup.doc.wikitext"/>
 </manifest:manifest>
